tests/invalid/print_as_expression/main.py
def foo() -> int:
    x: int = print(1)
    return x
